--- a/3411-praticando-logica-projeto_inicial/carrinho-compras/index.html
+++ b/3411-praticando-logica-projeto_inicial/carrinho-compras/index.html
@@ -28,6 +28,7 @@
           <select class="produto-input" name="produto" id="produto">
             <option value="Fone de ouvido - R$100">Fone de ouvido - R$100</option>
             <option value="Celular - R$1400">Celular - R$1400</option>
+            <option value="Microfone ATR - R$1800">Microfone ATR - R$1800</option>
             <option value="Oculus VR - R$5000">Oculus VR - R$5000</option>
           </select>
           </div>
